Fixed Footer z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,6 +136,8 @@ h2 {
   left: 0;
   width: 100%;
   color: #ccc;
+  z-index: 100;
+  background-color: #2c2c2c;
 }
 #footer span {
   margin: 0 auto;
